Add project modals - #14.

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
                     </div>
 
-                    <div class="item-carousel">
+                    <div class="item-carousel" data-toggle="modal" data-target="#modal-mymxlog">
                         <div class="container row transparent">
                             <div class="col-lg-12 row">
                                 <div class="col-lg-3 case-study">
@@ -197,7 +197,7 @@
                             <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
                     </div>
 
-                    <div class="item-carousel">
+                    <div class="item-carousel" data-toggle="modal" data-target="#modal-skyhook-www">
                         <div class="container row transparent">
                             <div class="col-lg-12 row">
                                 <div class="col-lg-3 case-study">
@@ -218,7 +218,7 @@
                             <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
                     </div>
 
-                    <div class="item-carousel">
+                    <div class="item-carousel" data-toggle="modal" data-target="#modal-mailtree">
                         <div class="container row transparent">
                             <div class="col-lg-12 row">
                                 <div class="col-lg-3 case-study">
@@ -239,7 +239,7 @@
                             <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
                     </div>
 
-                    <div class="item-carousel">
+                    <div class="item-carousel" data-toggle="modal" data-target="#modal-logomaker">
                         <div class="container row transparent">
                             <div class="col-lg-12 row">
                                 <div class="col-lg-3 case-study">
@@ -260,7 +260,7 @@
                             <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
                     </div>
 
-                     <div class="item-carousel">
+                     <div class="item-carousel" data-toggle="modal" data-target="#modal-warwobble">
                         <div class="container row transparent">
                             <div class="col-lg-12 row">
                                 <div class="col-lg-3 case-study">
@@ -509,6 +509,235 @@
                 </div>
             </div>
         </div>
+
+        <div class="portfolio-modal modal" data-modal-source="mymxlog" id="modal-mymxlog" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-content" style="z-index: 10000;">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <h2>Mymxlog</h2>
+                                <hr class="star-primary">
+                                <p>
+                                  Web Development
+                                  Version two of Aviation Logging system, for Technicians, Pilots and Aviation Companies. <br>
+                                  Feel free to test: http://dev.mymxlog.com <br>
+                                  User: ind@gmail.com <br>
+                                  Pass: 123123123
+                                </p>
+                                <img src="images/portfolio/mymx/mx-1.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/mymx/mx-2.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/mymx/mx-3.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/mymx/mx-4.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/mymx/mx-5.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/mymx/mx-6.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/mymx/mx-7.png" class="img-responsive img-centered" alt="">
+                                <ul class="list-inline item-details">
+                                    <li>Client:
+                                        <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                        </strong>
+                                    </li>
+                                    <li>Date:
+                                        <strong><a href="http://startbootstrap.com">April 2014</a>
+                                        </strong>
+                                    </li>
+                                    <li>Service:
+                                        <strong><a href="http://startbootstrap.com">Web Development</a>
+                                        </strong>
+                                    </li>
+                                </ul>
+                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="portfolio-modal modal" data-modal-source="skyhook-www" id="modal-skyhook-www" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-content" style="z-index: 10000;">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <h2>Skyhook - WWW</h2>
+                                <hr class="star-primary">
+                                <p>
+                                  Other - Software Development<br>
+                                  Web Design/Programming.<br>
+                                  http://www.mymxlog.com
+                                </p>
+                                <img src="images/portfolio/skyhook-www/1.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/skyhook-www/2.png" class="img-responsive img-centered" alt="">
+                                <ul class="list-inline item-details">
+                                    <li>Client:
+                                        <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                        </strong>
+                                    </li>
+                                    <li>Date:data-toggle="modal" data-target="#modal-skyhook-www"
+                                        <strong><a href="http://startbootstrap.com">April 2014</a>
+                                        </strong>
+                                    </li>
+                                    <li>Service:
+                                        <strong><a href="http://startbootstrap.com">Web Development</a>
+                                        </strong>
+                                    </li>
+                                </ul>
+                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="portfolio-modal modal" data-modal-source="mailtree" id="modal-mailtree" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-content" style="z-index: 10000;">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <h2>MailTree</h2>
+                                <hr class="star-primary">
+                                <p>
+                                  Web Development mail-server-implementation, backbone-js, angularjs, web-programming, javascript, php<br>
+                                  Customizable Mail Forwarder client.
+                                </p>
+                                <img src="images/portfolio/mailtree/1.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/mailtree/2.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/mailtree/3.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/mailtree/4.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/mailtree/5.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/mailtree/6.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/mailtree/7.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/mailtree/8.png" class="img-responsive img-centered" alt="">
+                                <ul class="list-inline item-details">
+                                    <li>Client:
+                                        <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                        </strong>
+                                    </li>
+                                    <li>Date:
+                                        <strong><a href="http://startbootstrap.com">April 2014</a>
+                                        </strong>
+                                    </li>
+                                    <li>Service:
+                                        <strong><a href="http://startbootstrap.com">Web Development</a>
+                                        </strong>
+                                    </li>
+                                </ul>
+                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="portfolio-modal modal" data-modal-source="logomaker" id="modal-logomaker" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-content" style="z-index: 10000;">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <h2>Online Logo Maker</h2>
+                                <hr class="star-primary">
+                                <p>
+                                  A free professional logo design tool for everyone, focusing on usability and quality.<br>
+                                  <a href="http://www.onlinelogomaker.com/">http://www.onlinelogomaker.com/</a>
+                                </p>
+                                <img src="images/portfolio/logomaker/1.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/logomaker/2.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/logomaker/3.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/logomaker/4.png" class="img-responsive img-centered" alt="">
+                                <ul class="list-inline item-details">
+                                    <li>Client:
+                                        <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                        </strong>
+                                    </li>
+                                    <li>Date:
+                                        <strong><a href="http://startbootstrap.com">April 2014</a>
+                                        </strong>
+                                    </li>
+                                    <li>Service:
+                                        <strong><a href="http://startbootstrap.com">Web Development</a>
+                                        </strong>
+                                    </li>
+                                </ul>
+                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="portfolio-modal modal" data-modal-source="warwobble" id="modal-warwobble" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-content" style="z-index: 10000;">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <h2>WarWobble</h2>
+                                <hr class="star-primary">
+                                <p>
+                                  Game Development<br>
+                                  Warcraft 2 prototype, build on using HTML5 technologies and JavaScript. So it makes it playable from the browser. <br>
+                                  https://notendur.hi.is/~drk3/test/war/
+                                </p>
+                                <img src="images/portfolio/warwobble/1.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/warwobble/2.png" class="img-responsive img-centered" alt="">
+                                <ul class="list-inline item-details">
+                                    <li>Client:
+                                        <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                        </strong>
+                                    </li>
+                                    <li>Date:
+                                        <strong><a href="http://startbootstrap.com">April 2014</a>
+                                        </strong>
+                                    </li>
+                                    <li>Service:
+                                        <strong><a href="http://startbootstrap.com">Web Development</a>
+                                        </strong>
+                                    </li>
+                                </ul>
+                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <script src="js/modernizer/modernizr.js"></script>
