--- a/index.html
+++ b/index.html
@@ -525,9 +525,9 @@
                                 <h2>Mymxlog</h2>
                                 <hr class="star-primary">
                                 <p>
-                                  Web Development
-                                  Version two of Aviation Logging system, for Technicians, Pilots and Aviation Companies. <br>
-                                  Feel free to test: http://dev.mymxlog.com <br>
+                                  Web Development<br>
+                                  Version two of Aviation Logging system, for Technicians, Pilots and Aviation Companies. <br><br>
+                                  Feel free to test: <a href="http://dev.mymxlog.com">http://dev.mymxlog.com</a> <br>
                                   User: ind@gmail.com <br>
                                   Pass: 123123123
                                 </p>
@@ -577,7 +577,7 @@
                                 <p>
                                   Other - Software Development<br>
                                   Web Design/Programming.<br>
-                                  http://www.mymxlog.com
+                                  <a href="http://www.mymxlog.com">http://www.mymxlog.com</a>
                                 </p>
                                 <img src="images/portfolio/skyhook-www/1.png" class="img-responsive img-centered" alt="">
                                 <img src="images/portfolio/skyhook-www/2.png" class="img-responsive img-centered" alt="">
@@ -710,9 +710,9 @@
                                 <h2>WarWobble</h2>
                                 <hr class="star-primary">
                                 <p>
-                                  Game Development<br>
-                                  Warcraft 2 prototype, build on using HTML5 technologies and JavaScript. So it makes it playable from the browser. <br>
-                                  https://notendur.hi.is/~drk3/test/war/
+                                  Game Development<br><br>
+                                  Warcraft 2 prototype, build on using HTML5 technologies and JavaScript. So it makes it playable from the browser. <br><br>
+                                  <a href="https://notendur.hi.is/~drk3/test/war/">https://notendur.hi.is/~drk3/test/war/</a>
                                 </p>
                                 <img src="images/portfolio/warwobble/1.png" class="img-responsive img-centered" alt="">
                                 <img src="images/portfolio/warwobble/2.png" class="img-responsive img-centered" alt="">
