--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                   <div class="col-lg-7">
                                       <p style="font-size:16px;">
                                         Your <strong>Guide</strong> to the best boating spots. An online Cruising guide... That works on any device.
-                                        <!-- br><a href="/portfolio/score-revolution">View case study →</a -->
+                                        <br><span class="link">View more →</span>
                                       </p>
                                   </div>
                             </div>
@@ -188,7 +188,7 @@
                                   <div class="col-lg-7">
                                       <p style="font-size:16px;">
                                         Your <strong>toolbox</strong> to manage your recent experience records and produce detailed reports with ease. All i.a.w EASA Part-145 & 66 regulations.
-                                        <!-- br><a href="/portfolio/score-revolution">View case study →</a -->
+                                        <br><span class="link">View more →</span>
                                       </p>
                                   </div>
                             </div>
@@ -209,7 +209,7 @@
                                   <div class="col-lg-7">
                                       <p style="font-size:16px;">
                                         Your <strong>toolbox</strong> to manage your recent experience records and produce detailed reports with ease. All i.a.w EASA Part-145 & 66 regulations.
-                                        <!-- br><a href="/portfolio/score-revolution">View case study →</a -->
+                                        <br><span class="link">View more →</span>
                                       </p>
                                   </div>
                             </div>
@@ -230,7 +230,7 @@
                                   <div class="col-lg-7">
                                       <p style="font-size:16px;">
                                         <strong>Mail</strong> Forwarder that bases on mail subject keywords.
-                                        <!-- br><a href="/portfolio/score-revolution">View case study →</a -->
+                                        <br><span class="link">View more →</span>
                                       </p>
                                   </div>
                             </div>
@@ -251,12 +251,33 @@
                                   <div class="col-lg-7">
                                       <p style="font-size:16px;">
                                         A free online logo maker.
-                                        <!-- br><a href="/portfolio/score-revolution">View case study →</a -->
+                                        <br><span class="link">View more →</span>
                                       </p>
                                   </div>
                             </div>
                           </div>
                         <img src="images/clients/client-6.png" alt="">
+                            <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
+                    </div>
+
+                    <div class="item-carousel" data-toggle="modal" data-target="#modal-admiral">
+                        <div class="container row transparent">
+                            <div class="col-lg-12 row">
+                                <div class="col-lg-3 case-study">
+                                  <h1 style="font-size:26px;">
+                                    <span class="case-study">Case Study</span>
+                                    Admiral
+                                  </h1>
+                                  </div>
+                                  <div class="col-lg-7">
+                                      <p style="font-size:16px;">
+                                        A <strong>web-based</strong> development environment.
+                                        <br><span class="link">View more →</span>
+                                      </p>
+                                  </div>
+                            </div>
+                          </div>
+                        <img src="images/clients/client-8.png" alt="">
                             <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
                     </div>
 
@@ -272,7 +293,7 @@
                                   <div class="col-lg-7">
                                       <p style="font-size:16px;">
                                         Based on WarCraft II by Blizzard
-                                        <!-- br><a href="/portfolio/score-revolution">View case study →</a -->
+                                        <br><span class="link">View more →</span>
                                       </p>
                                   </div>
                             </div>
@@ -673,6 +694,57 @@
                                 <img src="images/portfolio/logomaker/2.png" class="img-responsive img-centered" alt="">
                                 <img src="images/portfolio/logomaker/3.png" class="img-responsive img-centered" alt="">
                                 <img src="images/portfolio/logomaker/4.png" class="img-responsive img-centered" alt="">
+                                <ul class="list-inline item-details">
+                                    <li>Client:
+                                        <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                        </strong>
+                                    </li>
+                                    <li>Date:
+                                        <strong><a href="http://startbootstrap.com">April 2014</a>
+                                        </strong>
+                                    </li>
+                                    <li>Service:
+                                        <strong><a href="http://startbootstrap.com">Web Development</a>
+                                        </strong>
+                                    </li>
+                                </ul>
+                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="portfolio-modal modal" data-modal-source="admiral" id="modal-admiral" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-content" style="z-index: 10000;">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <h2>Admiral</h2>
+                                <hr class="star-primary">
+                                <p>
+                                  Web-Based Development Enviroment, build on top of bootstrap.<br>
+                                  It has it's own code-editor. <br>
+                                  FTP, SSH, MySQL client. <br>
+                                  Administrator page, to manage MySQL and also GNU/Linux users from web interface at the same time. <br><br>
+
+                                  <a href="https://github.com/dud3/ADMIRAL">https://github.com/dud3/ADMIRAL</a>
+                                </p>
+                                <img src="images/portfolio/admiral/1.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/admiral/2.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/admiral/3.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/admiral/4.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/admiral/4.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/admiral/5.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/admiral/6.png" class="img-responsive img-centered" alt="">
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
