--- a/index.html
+++ b/index.html
@@ -316,10 +316,10 @@
                     <div class=row>
                         <div class=col-xs-12>
                             <ul class="customer-logos unstyled">
-                                <li class="cust"><img class="cust-logos" src="images/YachtingsBestLogo-gray.png"></li>
+                                <li class="cust"><img class="cust-logos" src="images/yachtingsbest.png"></li>
                                 <li class="cust"><img class="cust-logos" src="images/mymxlog-logo-gray.png"></li>
-                                <li class="cust"><img style="width:150px;" src="images/ap-logo-gray.jpg"></li>
-                                <li class="cust"><img width="200px;" src="images/alexent-logo-gray.jpg"></li>
+                                <li class="cust"><img style="width:250px;" src="images/olm.png"></li>
+                                <li class="cust"><img width="200px;" src="images/alexent.gif"></li>
                                 <li class="cust"></li>
                                 <li class="cust"></li>
                                 <li class="cust"></li>
