--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
                         <div class=col-xs-12>
                             <ul class="customer-logos unstyled">
                                 <li class="cust"><img class="cust-logos" src="images/yachtingsbest.png"></li>
-                                <li class="cust"><img class="cust-logos" src="images/mymxlog-logo-gray.png"></li>
                                 <li class="cust"><img style="width:250px;" src="images/olm.png"></li>
+                                <li class="cust"><img class="cust-logos" src="images/skyhook.png"></li>
                                 <li class="cust"><img width="200px;" src="images/alexent.gif"></li>
                                 <li class="cust"></li>
                                 <li class="cust"></li>
