Add mobile pictures - #14.

--- a/index.html
+++ b/index.html
@@ -509,6 +509,11 @@
                                 <img src="images/portfolio/yachting/yacht-5.png" class="img-responsive img-centered" alt="">
                                 <img src="images/portfolio/yachting/yacht-6.png" class="img-responsive img-centered" alt="">
                                 <img src="images/portfolio/yachting/yacht-7.png" class="img-responsive img-centered" alt="">
+                                <h3>Mobile responsive</h3>
+                                <img src="images/portfolio/yachting/8.png" class="img-responsive img-centered mobile" alt="">
+                                <img src="images/portfolio/yachting/9.png" class="img-responsive img-centered mobile" alt="">
+                                <img src="images/portfolio/yachting/10.png" class="img-responsive img-centered mobile" alt="">
+                                <img src="images/portfolio/yachting/11.png" class="img-responsive img-centered mobile" alt="">
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
@@ -559,6 +564,11 @@
                                 <img src="images/portfolio/mymx/mx-5.png" class="img-responsive img-centered" alt="">
                                 <img src="images/portfolio/mymx/mx-6.png" class="img-responsive img-centered" alt="">
                                 <img src="images/portfolio/mymx/mx-7.png" class="img-responsive img-centered" alt="">
+                                <h3>Mobile responsive</h3>
+                                <img src="images/portfolio/mymx/11.png" class="img-responsive img-centered mobile" alt="">
+                                <img src="images/portfolio/mymx/12.png" class="img-responsive img-centered mobile" alt="">
+                                <img src="images/portfolio/mymx/13.png" class="img-responsive img-centered mobile" alt="">
+                                <img src="images/portfolio/mymx/14.png" class="img-responsive img-centered mobile" alt="">
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
@@ -650,6 +660,10 @@
                                 <img src="images/portfolio/mailtree/6.png" class="img-responsive img-centered" alt="">
                                 <img src="images/portfolio/mailtree/7.png" class="img-responsive img-centered" alt="">
                                 <img src="images/portfolio/mailtree/8.png" class="img-responsive img-centered" alt="">
+                                <h3>Mobile responsive</h3>
+                                <img src="images/portfolio/mailtree/9.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/mailtree/10.png" class="img-responsive img-centered" alt="">
+                                <img src="images/portfolio/mailtree/11.png" class="img-responsive img-centered" alt="">
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
